// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`Table\` component should render correctly with \`className\` prop 1`] = `
<div
  className="table __CLASSNAME__"
>
  __CONTENT__
</div>
`;

exports[`\`Table\` component should render correctly with default props 1`] = `
<div
  className="table"
>
  __CONTENT__
</div>
`;
